libs/toolkit-macros-tests/tests/ui/fail/lifecycle_unknown_arg.stderr
error: expected lifecycle args: entry="...", stop_timeout="...", await_ready[=true|false]
 --> tests/ui/fail/lifecycle_unknown_arg.rs:3:68
  |
3 | #[gear(name="x", capabilities=[stateful], lifecycle(entry="serve", foo="bar"))]
  |                                                                    ^^^^^^^^^
